Fix truncate game title

--- a/src/components/GameCard/index.css
+++ b/src/components/GameCard/index.css
@@ -7,6 +7,9 @@
 
 .game-card > .game-title {
   color: var(--off-white);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .game-card > a {
